added web-service, removed support for lambda-kinesis

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ disable = [
     "redefined-outer-name",
     "super-with-arguments",
     "too-many-arguments",
-    "too-many-positional-arguments"
+    "too-many-positional-arguments",
+    "duplicate-code"
 ]
 
 [tool.black]
