--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ prefect = "*"
 scikit-learn = "*"
 torch = {version = "*", index = "downloadpytorch"}
 boto3 = "*"
+evidently = "*"
 
 [dev-packages]
 black = "*"
